feat(fingerprint): add api for fingerprint (#76)
